--- a/index.css
+++ b/index.css
@@ -23,8 +23,8 @@
             justify-content: center;
             align-items: flex-start;
             align-content: flex-start;
-            height: 70vw;
-            min-height: 400px;
+            height: 60vw;
+            min-height: 300px;
             max-height: 750px;
             min-width: 300px;
             color: #eee;
@@ -46,21 +46,30 @@
         .header:before {
             content: "";
             width: 100%;
-            height: 200%;
+            height: 100%;
             position: absolute;
             top: 0;
             left: 0;
             -webkit-backface-visibility: hidden;
             -webkit-transform: translateZ(0);
             backface-visibility: hidden;
-            scale(1.0, 1.0);
-            transform: translateZ(0);
-            background: #1B2030 url(https://lp-cms-production.imgix.net/2023-04/shutterstock_512405101.jpg?fbclid=IwY2xjawKaXsNleHRuA2FlbQIxMQABHlkj16tn9jcGjCvtGvh6DXF7AUIJKRNl-AEkjT5qPWw7pdP9tQSSHTrYPyrZ_aem_RjfL_rwLxLI7RYKgZBXsng) 50% 0 no-repeat;
-            background-size: 100%;
+            background: #1B2030 url(https://lp-cms-production.imgix.net/2023-04/shutterstock_512405101.jpg) 0% 0 no-repeat;
+            background-size: cover;
             background-attachment: fixed;
-            animation: grow 360s linear 10ms infinite;
-            transition: all 0.4s ease-in-out;
-            z-index: -2
+            animation: pan-image 120s linear infinite alternate;
+            z-index: -2;
+        }
+
+        @keyframes pan-image {
+            0% {
+                transform: scale(1) translateY(0);
+                background-position: 0% 0%;
+            }
+
+            100% {
+                transform: scale(1) translateY(0);
+                background-position: 0% 100%;
+            }
         }
 
         .header a {
