--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -1,16 +1,18 @@
-html,
-body {
+html, body {
     margin: 0;
     height: 120%;
     font-family: "Montserrat", sans-serif;
 }
+
 a {
     text-decoration: none
 }
+
 .navbar-hide {
     transform: translateY(-100%);
     transition: transform 0.3s ease-in-out;
 }
+
 .header:after {
     content: "";
     width: 100%;
@@ -21,6 +23,7 @@ a {
     z-index: -1;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.12) 40%, rgba(27, 32, 48, 1) 100%);
 }
+
 .header:before {
     content: "";
     width: 100%;
@@ -37,6 +40,7 @@ a {
     animation: pan-image 120s linear infinite alternate;
     z-index: -2;
 }
+
 @keyframes pan-image {
     0% {
         transform: scale(1) translateY(0);
@@ -47,6 +51,7 @@ a {
         background-position: 0% 100%;
     }
 }
+
 .header a {
     color: #eee
 }
