--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -11,11 +11,6 @@ a {
     text-decoration: none
 }
 
-.navbar-hide {
-    transform: translateY(-100%);
-    transition: transform 0.3s ease-in-out;
-}
-
 .header:after {
     content: "";
     width: 100%;
@@ -58,4 +53,11 @@ a {
 
 .header a {
     color: #eee
+}
+
+
+@media (min-width: 768px) {
+    .info {
+        padding: 15% 10% 0 10%;
+    }
 }
