overflow-x:hidden global.cc html, body

--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -5,6 +5,7 @@ html, body {
     /* Changed from 120% */
     min-height: 100vh;
     font-family: "Montserrat", sans-serif;
+    overflow-x: hidden;
 }
 
 a {
