--- a/contents/contents.css
+++ b/contents/contents.css
@@ -9,6 +9,10 @@
             font-family: "Montserrat", sans-serif;
         }
 
+        .indented {
+            text-indent: 40px;
+        }
+
         a {
             text-decoration: none
         }
